# Programming-9

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: shader_template.h.in
include/GopherEngine/Core/: Camera.hpp  CameraComponent.hpp  Clock.hpp  Component.hpp  Events.hpp  FileLoader.hpp  Guid.hpp  Light.hpp  LightComponent.hpp  MainLoop.hpp  MeshComponent.hpp  Node.hpp  RenderContext.hpp  Scene.hpp  Service.hpp  Transform.hpp  Types.hpp  Utils.hpp
include/GopherEngine/Platform/: Window.hpp
include/GopherEngine/Renderer/: BlinnPhongMaterial.hpp  Material.hpp  Renderer.hpp  ResourceUploader.hpp  ShaderLoader.hpp  ShaderProgram.hpp  UnlitMaterial.hpp
include/GopherEngine/Resource/: Geometry.hpp  Mesh.hpp  MeshFactory.hpp  Resource.hpp  ResourceManager.hpp  Texture.hpp
src/GopherEngine/Core/: Camera.cpp  CameraComponent.cpp  Clock.cpp  FileLoader.cpp  LightComponent.cpp  MainLoop.cpp  MeshComponent.cpp  Node.cpp  Scene.cpp
src/GopherEngine/Platform/: Window.cpp
src/GopherEngine/Renderer/: BlinnPhongMaterial.cpp  Material.cpp  Renderer.cpp  ResourceUploader.cpp  ShaderLoader.cpp  ShaderProgram.cpp  UnlitMaterial.cpp
src/GopherEngine/Renderer/shaders/: blinnphong.frag  blinnphong.vert  unlit.frag  unlit.vert
src/GopherEngine/Resource/: MeshFactory.cpp  ResourceManager.cpp
src/MainLoopTest/: MainLoopTest.cpp
